# drf-resize-image

./: .gitignore  .gitlab-ci.yml  setup.cfg
backend/: Makefile  pyproject.toml  requirements.txt
backend/config/: routers.py  settings.py
backend/image_handler/: models.py  serializers.py
backend/images/: factories.py  mixins.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/images/migrations/: 0002_auto_20220130_1953.py  0003_remove_image_file.py  0005_image_picture.py  0007_auto_20220131_2300.py  0012_auto_20220202_0106.py  0013_auto_20220202_0109.py  0014_auto_20220202_0115.py  0015_auto_20220202_0129.py  0016_remove_image_name.py  0017_delete_imagetest.py  0018_image_name.py  0019_remove_image_name.py  0020_auto_20220202_2254.py  0021_auto_20220204_0000.py  0022_auto_20220207_2339.py
backend/images/tests/: mixin_methods_tests.py  validation_tests.py  view_tests.py
config/: routers.py  settings.py  urls.py
images/: apps.py  serializers.py  views.py
images/migrations/: 0001_initial.py  0004_remove_image_picture.py  0006_auto_20220131_2145.py  0008_auto_20220131_2311.py  0009_auto_20220131_2314.py  0010_auto_20220201_2159.py  0011_imagetest.py
images/tests/: mixin_methods_tests.py  validation_tests.py  view_tests.py
