[tool.poetry]
name = "Ida project"
version = "0.1.0"
description = "Test task"
authors = ["DOBRO-228 <matematikaigor@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.1"
djangorestframework = "^3.13.1"
django-debug-toolbar = "^3.2.4"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
